modified:   Styles/utils.css 	new file:   icons/react.svg 	modified:   index.html Added React to technologies, fixed spacing on Work

--- a/Styles/utils.css
+++ b/Styles/utils.css
@@ -29,6 +29,7 @@
 
 .section {
   margin-top: 8rem;
+  margin-bottom: 3rem;
 }
 
 /* xs */
